added voice agent with tool calling

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,5 @@ DEEPSEEK_API_KEY=your-deepseek-api-key
 PERPLEXITY_API_KEY=your-perplexity-api-key
 OPENWEATHER_API_KEY=your-openweather-api-key
 
+#voice agent (Deepgram)
+DEEPGRAM_API_KEY=your-deepgram-api-key
