--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ OPENWEATHER_API_KEY=your-openweather-api-key
 
 #voice agent (Deepgram)
 DEEPGRAM_API_KEY=your-deepgram-api-key
+
+#xAI Grok Voice Agent
+XAI_API_KEY=your-xai-api-key
